Add tests and demos